basic application template, home page and profile page

--- a/photo_editor_app/lib/l10n/app_en.arb
+++ b/photo_editor_app/lib/l10n/app_en.arb
@@ -1,5 +1,9 @@
 {
   "@@locale": "en",
   "title": "Demo",
-  "increment": "Increment"
+  "back_button_text": "Back",
+  "profile_page_title": "Profile",
+
+  "not_logged_in": "Not signed in",
+  "logged_in_as": "Signed in"
 }
