--- a/photo_editor_app/lib/l10n/app_hu.arb
+++ b/photo_editor_app/lib/l10n/app_hu.arb
@@ -5,6 +5,10 @@
 
   "collage_page_title": "Készíts kollázsokat",
   "profile_page_title": "Fiók",
+  "home_page_title": "Főoldal",
+  "edited_page_title": "Szerkesztett képek",
+  "ai_page_title": "AI generálás",
+  "edit_page_title": "Fotó szerkesztése",
 
   "not_logged_in": "Nincs bejelentkezve",
   "logged_in_as": "Bejelentkezve",
