--- a/photo_editor_app/lib/l10n/app_en.arb
+++ b/photo_editor_app/lib/l10n/app_en.arb
@@ -8,7 +8,7 @@
   "home_page_title": "Home",
   "edited_page_title": "Edited photos",
   "ai_page_title": "Generate with AI",
-  "edit_page_title": "Edit photo",
+  "edit_page_title": "Edit",
 
   "not_logged_in": "Not signed in",
   "logged_in_as": "Signed in",
@@ -16,5 +16,18 @@
   "permission_required_title": "Permission Required",
   "permission_required_message": "To access the gallery and files, please grant permission.",
   "go_to_settings": "Go to Settings",
-  "cancel": "Cancel"
+  "cancel": "Cancel",
+
+  "collage_button_text": "Create collages",
+  "generate_button_text": "Generate with Ai",
+  "filters_for_image_button_text": "Apply filters",
+  "crop_image_button_text": "Crop and resize",
+  "frames_button_text": "Frames",
+
+  "photos_section_text": "Edit photo",
+  "videos_section_text": "Edit video",
+
+  "clips_button_text": "Clips",
+  "movies_button_text": "Movie maker",
+  "subtitles_button_text": "Create subtitle"
 }
